# localpdf-studio

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DECISION_LOG.md  HISTORY.md  INSTALL.md  LICENSE  NOTICE  README.md  TASKS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 00_PRODUCT_BRIEF.md  01_FEATURE_SPEC.md  02_ARCHITECTURE.md  03_WINDOWS_CONTEXT_MENU.md  04_RELEASE_UPDATE.md  05_SECURITY_PRIVACY_LICENSE.md  06_PHASE_PLAN.md  09_RELEASE_QA_CHECKLIST.md  10_EXTERNAL_PUBLISHING_TODO.md  en.html  index.html  ja.html
docs/spec-bundle/: AGENTS.md  CHANGELOG.md  DECISION_LOG.md  HISTORY.md  README.md  SOURCES.md  TASKS.md
e2e/: README.md  smoke.spec.ts
packaging/aur/: PKGBUILD  README.md
packaging/chocolatey/: README.md  localpdf-studio.nuspec
packaging/homebrew/: README.md  localpdf-studio.rb
packaging/snap/: README.md  snapcraft.yaml
packaging/winget/: README.md  jeiel85.LocalPDFStudio.installer.yaml  jeiel85.LocalPDFStudio.locale.en-US.yaml  jeiel85.LocalPDFStudio.locale.ko-KR.yaml  jeiel85.LocalPDFStudio.yaml
prompts/: VIBE_CODING_PROMPTS.md
scripts/linux/: publish-aur.sh  publish-snap.sh
scripts/windows/: create-portable-zip.ps1  (+10 more)
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  installer_service.rs  job_queue.rs  lib.rs  main.rs  ocr_service.rs  protocol.rs  qpdf_service.rs  settings.rs  startup.rs  watermark_service.rs
src-tauri/windows/: nsis-hooks.nsh
(+62 files in other folders)
