[package]
name = "localpdf-studio"
version = "0.17.1"
description = "Local-first desktop PDF studio"
authors = ["Aiden Park <jeiel85@gmail.com>"]
edition = "2021"
rust-version = "1.77"
license = "Apache-2.0"

[lib]
name = "localpdf_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
which = "7"
